--- a/src/main/resources/templates/user/updateUser.html
+++ b/src/main/resources/templates/user/updateUser.html
@@ -11,8 +11,12 @@
     <input type="hidden" th:field="*{id}"/>
     <label for="name">Enter name: </label>
     <input th:type="text" th:field="*{name}" id="name">
+    <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
+    <br/>
+    <br/>
     <label for="age">Enter age: </label>
     <input th:type="text" th:field="*{age}" id="age">
+    <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Name error</div>
     <br/>
     <a th:href="@{/user}" class="button">Back</a>
     <br/>
